Kubernetes/manifests/phase4/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: k8s-course-app
  namespace: k8s-course
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /
spec:
  ingressClassName: nginx
  rules:
    - host: k8scourse.local
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: k8s-course-app
                port:
                  number: 80
